Closed Bug 872447 Opened 12 years ago Closed 12 years ago

[patch] cmd/p7sign/p7sign.c:260 use of unitialized variable cert

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mbartos, Unassigned)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20100101 Firefox/20.0 Build ID: 20130401133302 Steps to reproduce: In cmd/p7sign/p7sign.c there is CERTCertificate declaration without initialization on line 150. Then when opening cert database on line 231 fails, branch loser is taken where uninitialized variable cert is used. Patch attached.
Keywords: checkin-needed
patch pushed.
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: