Fix uninitialized variable. patch by mbartos@redhat.com r+ bsmith Bug 872447 - [patch] cmd/p7sign/p7sign.c:260 use of unitialized variable cert